fixing letter spacing in h3 caption.

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -11,3 +11,8 @@
 	margin-top: 4px;
 
 }
+
+.caption h3
+{
+	line-height: 100%;
+}
